<resources>
    <string name="app_name">Cable TV</string>
    <string name="title_activity_user">User</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="caf">CAF</string>
    <string name="vc">VC</string>
    <string name="active">Active</string>
    <string name="mobile">Mobile</string>
    <string name="installed_on">Installed On</string>
    <string name="amount">Amount</string>
    <string name="installDate">Date</string>
    <string name="dateTime">Time, Date</string>
    <string name="defAmount">210</string>
    <string name="title_activity_edit">Edit User</string>
    <string name="save">Save</string>
    <string name="transactions">Transactions</string>
    <string name="title_transaction_activity">Transactions</string>
    <string name="delete">Delete</string>
    <string name="empty">Uh oh! List is empty!</string>
    <string name="title">All</string>
    <string name="status">Status</string>
    <string name="image">Image</string>
    <string name="item">Item</string>
    <string name="title_main_activity">Cable TV</string>
    <string name="no_transactions">No Transactions for this User yet!</string>
    <string name="empty_history">History is Empty!!</string>
    <string name="title_activity_collection">Collection</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="shortcut_disabled_message">Shortcut is disabled</string>
    <string name="add_user_shortcut_label">Add User</string>
    <string name="clusters_shortcut_label">Clusters</string>
    <string name="collection_shortcut_label">Collection</string>
    <string name="title_history_activity">History</string>
    <string name="no_clusters">Uh Oh! No Clusters!</string>
    <string name="no_history">No History!</string>
    <string name="total_amount">Total Amount</string>
    <string name="file_path">Current Save Path:</string>
    <string name="change_path">Change Path</string>
    <string name="backup_now">Backup Now</string>
    <string name="last_backup">Last Backup Time:</string>
    <string name="last_users_restore">Last Users Restore:</string>
    <string name="last_trans_restore">Last Trans. Restore:</string>
    <string name="add_users">Add Users</string>
    <string name="add_trans">Add Transactions</string>
    <string name="title_activity_backup_restore">Backup And Restore</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_inactive">Inactive Users</string>
    <string name="search">Search</string>
    <string name="clear_up">Clear Up</string>
    <string name="remove_character">Remove unknown characters\nat the end of Names</string>
    <string name="report_error_and_send_feedback">Report errors\nSend feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="alter_table">Alter Table</string>
    <string name="reformat_dates">Reformat Dates</string>
    <string name="experimental_settings">Experimental Settings below, Use with caution!!</string>
</resources>
