<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rakesh.cabletv.EditActivity"
    tools:showIn="@layout/activity_edit">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_edit"
        android:inputType="phone"
        android:hint="@string/mobile"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <EditText
        android:id="@+id/address_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_edit"
        android:hint="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_edit" />

    <EditText
        android:id="@+id/caf_edit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_edit"
        android:hint="@string/caf"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_edit" />

    <EditText
        android:id="@+id/vc_edit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_edit"
        android:hint="@string/vc"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caf_edit" />

    <CheckBox
        android:id="@+id/active_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_edit"
        android:layout_marginTop="8dp"
        android:hint="@string/active"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/caf_edit"
        app:layout_constraintTop_toTopOf="@+id/caf_edit" />

    <EditText
        android:id="@+id/install_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_edit"
        android:hint="@string/installed_on"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vc_edit" />


</android.support.constraint.ConstraintLayout>
