<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rakesh.cabletv.UserActivity"
    tools:showIn="@layout/activity_user">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_call"
        android:drawablePadding="5dp"
        android:text="@string/mobile"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_text" />

    <TextView
        android:id="@+id/caf_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/caf"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_text" />

    <TextView
        android:id="@+id/vc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/vc"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caf_text" />

    <CheckedTextView
        android:id="@+id/active_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="8dp"
        android:text="@string/active"
        android:textSize="18sp"
        android:checkMark="@drawable/ic_check_single_green"
        app:layout_constraintStart_toEndOf="@+id/caf_text"
        app:layout_constraintTop_toTopOf="@+id/caf_text" />

    <TextView
        android:id="@+id/install_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/installed_on"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vc_text" />

    <TextView
        android:id="@+id/amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="14sp"
        android:labelFor="@+id/amount"
        app:layout_constraintBottom_toTopOf="@id/amount"
        app:layout_constraintStart_toStartOf="@id/amount" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/date_paid"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/date_paid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/installDate"
        android:textSize="14sp"
        android:labelFor="@+id/date_paid"
        app:layout_constraintBottom_toTopOf="@id/date_paid"
        app:layout_constraintStart_toStartOf="@id/date_paid" />

    <EditText
        android:id="@+id/date_paid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
