<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rakesh.cabletv.SettingsActivity">

    <TextView
        android:id="@+id/clear_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:text="@string/remove_character"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccentLight"
        android:text="@string/clear_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear_up_text" />

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:text="@string/report_error_and_send_feedback"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear_up" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccentLight"
        android:text="@string/send_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_text" />

    <TextView
        android:id="@+id/developer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:text="@string/experimental_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback" />

    <Button
        android:id="@+id/alter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccentLight"
        android:text="@string/alter_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_text" />

    <Button
        android:id="@+id/reformat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccentLight"
        android:text="@string/reformat_dates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alter" />

</android.support.constraint.ConstraintLayout>
