<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rakesh.cabletv.CollectionActivity"
    tools:showIn="@layout/activity_collection">

    <TextView
        android:id="@+id/start_date_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/start_date"
        android:text="@string/start_date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:inputType="date"
        android:maxLines="1"
        android:nextFocusForward="@+id/end_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/end_date"
        app:layout_constraintTop_toBottomOf="@id/start_date_text" />

    <TextView
        android:id="@+id/end_date_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/end_date"
        android:text="@string/end_date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/end_date"
        app:layout_constraintTop_toTopOf="@id/start_date_text" />

    <EditText
        android:id="@id/end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:inputType="date"
        android:maxLines="1"
        android:nextFocusForward="@+id/start_time"
        app:layout_constraintLeft_toRightOf="@id/start_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_date_text" />

    <TextView
        android:id="@+id/start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/start_time"
        android:text="@string/start_time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date" />

    <EditText
        android:id="@id/start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="time"
        android:maxLines="1"
        android:nextFocusForward="@+id/end_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/end_time"
        app:layout_constraintTop_toBottomOf="@id/start_time_text" />

    <TextView
        android:id="@+id/end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/end_time"
        android:text="@string/end_time"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/end_time"
        app:layout_constraintTop_toTopOf="@id/start_time_text" />

    <EditText
        android:id="@id/end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="time"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/start_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_time_text" />

</android.support.constraint.ConstraintLayout>
